@@ -7,6 +7,7 @@
         "html"  : true,
         "img"   : true
     },
+    "cache"                 : false,
     "logs"                  : false,
     "show_keys_panel"       : true,
     "server"                : true,
