@@ -12,7 +12,13 @@
         ext,
         path, fs, zlib, url,
         
-        OK, FILE_NOT_FOUND;
+        OK, FILE_NOT_FOUND,
+        
+        Config = {
+            server  : true,
+            socket  : true,
+            port    : 80
+        };
     
     /* Consts */
     
@@ -67,11 +73,7 @@
     exports.ext         = ext               = jsonrequire('ext');
     exports.mainpackage                     = rootrequire('package');
     /* base configuration */
-    exports.config                          = {
-        server  : true,
-        socket  : true,
-        port    : 80
-    },
+    exports.config                          = Config,
     
     
     /* 
@@ -155,22 +157,17 @@
      *  name - имя файла
      * gzip - данные сжаты gzip'ом
      * query
-     * cacheControl
      * https://developers.google.com/speed/docs/best-practices/caching?hl=ru#LeverageProxyCaching
      */
     function generateHeaders(pParams){
-        var lRet    = Util.checkObjTrue(pParams, 'name'),
+        var lRet    = Util.checkObjTrue(pParams, ['name']),
             p       = pParams;
-        Util.log(pParams);
-        Util.log(lRet);
+        
         if(lRet){
             var lExt                = Util.getExtension(p.name),
                 lType               = ext[lExt] || 'text/plain',
                 lContentEncoding    = '';
             
-            if( !Util.checkObjTrue(pParams, 'cacheControl') )
-                p.cacheControl = 1;
-                
             /* if type of file any, but img - then we shoud specify charset */
             if( !Util.isContainStr(lType, 'img') )
                 lContentEncoding = '; charset=UTF-8';
@@ -179,20 +176,21 @@
                 lType = 'application/octet-stream';
             
             
-            if( !Util.strCmp(lExt, '.appcache') )
-                p.cacheControl = 31337 * 21;
-            
             lRet = {
                 'Content-Type': lType + lContentEncoding,
                 'last-modified': new Date().toString(),
                 'Vary': 'Accept-Encoding'
             };
             
-            if(p.cacheControl)
-                lRet['cache-control']       = 'max-age=' + p.cacheControl;
+            if( !Util.strCmp(lExt, '.appcache') && exports.config.cache){
+                var lCacheControl = 31337 * 21;
+                lRet['cache-control']       = 'max-age=' + lCacheControl;
+            }
             
             if(p.gzip)
                 lRet['content-encoding']    = 'gzip';
+            
+            Util.log(Config);
         }
         
         return lRet;
