@@ -1,4 +1,4 @@
-/* 
+/*
  * Licensed under MIT License http://www.opensource.org/licenses/mit-license
  * Module contain additional system functional
  */
